tests/characterization/snapshots/characterization__init_rejects__invalid_env_name.snap
---
source: tests/characterization/main.rs
expression: "render_observation(&context, &output, &[])"
---
exit: 1
--- stdout ---
--- stderr ---
Error: invalid env_name 'Bad_Name'.
env_name must match: ^[a-z0-9][a-z0-9_.-]*$
Use lowercase letters, digits, '.', '_' or '-', and start with a letter or digit.
--- filesystem ---
<EMPTY>
--- selected files ---
<NONE>
--- end ---
