tests/characterization/snapshots/characterization__init_rejects__unknown_template.snap
---
source: tests/characterization/main.rs
expression: "render_observation(&context, &output, &[])"
---
exit: 1
--- stdout ---
--- stderr ---
Error: template 'nonexistent' is not implemented.
--- filesystem ---
<EMPTY>
--- selected files ---
<NONE>
--- end ---
